# tabloid_web

./: .gitignore  AGENTS.md  CLAUDE.md  SPECS.md  manage.py  package.json  pyproject.toml
.claude/: ER_DIAGRAM.md
accounts/: models.py  supabase.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
catalog/: admin.py  models.py  services.py
catalog/management/commands/: seed_dummy_data.py
catalog/migrations/: 0001_initial.py  0002_category_image_url_pricesnapshot_currency_and_more.py  0003_category_verticals.py
deals/: cart.py  context_processors.py  models.py  urls.py  views.py
deals/migrations/: 0001_initial.py  0002_post_postprice_postvote_and_more.py  0003_add_post_source.py  0004_remove_post_source_post_posted_by.py
deals/templates/deals/: _notification_row.html  cart.html  notifications.html  post_detail.html  post_list.html  product_detail.html  (+4 more)
deals/templatetags/: deals_tags.py
static/css/: output.css  tailwind.css  verticals.css
static/js/: post-detail.js  product-detail.js
stores/: admin.py  models.py
stores/migrations/: 0001_initial.py  0002_alter_store_logo_url.py  0002_rename_phone_store_telephone_1_and_more.py  0003_store_vertical.py
tabloid_web/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
templates/: base.html  index.html
templates/accounts/: login.html
templates/deals/: category.html  category_list.html
templates/partials/: category_card.html  drawer_menu.html  location_selector.html  post_card.html  price_card.html  price_item.html  product_card.html  store_card.html  store_section_header.html
(+1 files in other folders)
