[project]
name = "tabloid-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==5.2.13",
    "django-storages[s3]>=1.14.6",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32",
]
